# shared

./: README.md  pyproject.toml
shared/structs/: common.py  reqs.py  res.py
shared/utils/: asyncio.py  debugging.py
structs/: common.py  reqs.py  res.py  struct.py
utils/: debugging.py
